2007-12-26  Badlop  <badlop@process-one.net>

	* src/mod_webpresence.erl: Translate menu items of webadmin hooks
	in each module (EJAB-485)

2007-09-22  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Added new ACCESS for automatic enable. Added image.php URL, useful in some cases.

	* README.txt: Added usage description.

	* TODO.txt: Added feature requests proposed by Pablo Saratxaga.

	* msgs/wa.msg: Added Walloon translation (thanks to Pablo Saratxaga).

	* src/mod_webpresence.erl: Better i18n support (thanks to Pablo Saratxaga).

2007-09-21  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Better i18n support.

2007-08-31  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Escape ' in status message. Fix bug while cheking jidurl and ridurl options. Small fix in PHP example.

2007-08-30  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Support for JavaScript output. Request for image of an unavailable resource results in an unavailable type of image.

2007-08-29  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Set jsf-jabber-text as default icon theme in the registration form. Fixed bug in data forms (thanks to NoAlWin).

	* README.txt: Improved example PHP script (thanks to NoAlWin).

	* data/pixmaps/*: Added many Icon Themes from Elmer NxG (thanks to Zbyszek Zolkiewski).

2007-08-28  Badlop  <badlop@ono.com>

	* AUTHORS: Added Badlop as main author, and mention Igor Goryachev as author of mod_presence.
	* README.txt: Same.
	* src/mod_webpresence.erl: Same.

	* LICENSE: Deleted, since all modules are by default published with the GPL license for compatibility with ejabberd.

	* src/mod_webpresence.erl: Added registration and theme statistics. Improved statistics: icon theme, and percentages. Added support for Text output. Changed order of options.
	

2007-08-27  Badlop  <badlop@ono.com>

	* README.txt: Updated description of configurable options.
	