@@ -1,3 +1,10 @@
+2008-01-29  Badlop  <badlop@process-one.net>
+
+	* src/mod_webpresence.erl: Support 'cb' parameter in js requests,
+	which is later added in the result as a callback (thanks to Eric
+	Sessoms)
+	* README.txt: Likewise
+
 2007-12-26  Badlop  <badlop@process-one.net>
 
 	* src/mod_webpresence.erl: Translate menu items of webadmin hooks
